--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -48,7 +48,10 @@
   background: #fff;
 }
 
-.levelLink {
+.checkboxButton {
+  width: 97px;
+  height: 98px;
+  border-radius: 12px;
   color: #0080c1;
   text-align: center;
   font-family: StratosSkyeng;
@@ -57,8 +60,52 @@
   font-weight: 400;
   line-height: 72px;
   text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.levelLink:visited {
-  color: #0080c1;
+.checkboxButton:hover {
+  color: #08608f;
+  background-color: #e7f06c;
+}
+
+.selected {
+  color: #08608f;
+  background-color: #e7f06c;
+  border: 2px solid #2E9AFF;
+}
+
+.selLevel {
+  display: none;
+}
+
+.buttonStart {
+  width: 153px;
+  height: 40px;
+  background-color: #33e042;
+  border-radius: 4px;
+  border: "0.7px solid var(--palette-navy-60, #5a6b3e)";
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: StratosSkyeng;
+  font-size: 24px;
+  line-height: 21px;
+  font-weight: 500;
+  letter-spacing: -0.14px;
+  color: #5a6b3e;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.easyMode {
+  font-family: StratosSkyeng;
+  font-size: 24px;
+  line-height: 21px;
+  font-weight: 500;
+  letter-spacing: -0.14px;
+  color: #5a6b3e;
 }
