--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -1,4 +1,5 @@
-.modal {
+.modal,
+.modalLeader {
   width: 480px;
   height: 459px;
   border-radius: 12px;
@@ -9,6 +10,10 @@
   align-items: center;
 }
 
+.modalLeader {
+  height: 636px;
+}
+
 .image {
   width: 96px;
   height: 96px;
@@ -16,6 +21,7 @@
 }
 
 .title {
+  width: 300px;
   color: #004980;
   font-variant-numeric: lining-nums proportional-nums;
   font-family: StratosSkyeng;
@@ -23,6 +29,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 48px;
+  text-align: center;
 
   margin-bottom: 28px;
 }
@@ -35,7 +42,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: 32px;
-
   margin-bottom: 10px;
 }
 
@@ -46,6 +52,29 @@
   font-style: normal;
   font-weight: 400;
   line-height: 72px;
-
   margin-bottom: 40px;
+}
+
+.goLeaderboard {
+  font-family: StratosSkyeng;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 400;
+  color: #004980;
+  margin-top: 16px;
+}
+
+.userName {
+  margin-bottom: 16px;
+  width: 276px;
+  height: 45px;
+  font-family: StratosSkyeng;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: center;
+  background-color: #fff;
+  border: none;
+  /* color: #999999; */
+  color: #000;
 }
