--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -64,6 +64,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  /* margin-bottom: 28px; */
 }
 
 .checkboxButton:hover {
@@ -74,7 +75,7 @@
 .selected {
   color: #08608f;
   background-color: #e7f06c;
-  border: 2px solid #2E9AFF;
+  border: 2px solid #2e9aff;
 }
 
 .selLevel {
@@ -82,30 +83,46 @@
 }
 
 .buttonStart {
-  width: 153px;
-  height: 40px;
-  background-color: #33e042;
-  border-radius: 4px;
-  border: "0.7px solid var(--palette-navy-60, #5a6b3e)";
+  /* width: 276px;
+  height: 45px;
+  background-color: #7ac100;
+  border-radius: 12px;
+  border: "0.7px solid var(--palette-navy-60, #7ac100)";
   outline: none;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: StratosSkyeng;
   font-size: 24px;
-  line-height: 21px;
-  font-weight: 500;
+  line-height: 32px;
+  font-weight: 400;
   letter-spacing: -0.14px;
-  color: #5a6b3e;
-  margin-right: 10px;
-  margin-top: 10px;
+  color: #fff; */
+  margin-top: 32px;
 }
 
 .easyMode {
   font-family: StratosSkyeng;
   font-size: 24px;
-  line-height: 21px;
-  font-weight: 500;
+  line-height: 32px;
+  font-weight: 400;
   letter-spacing: -0.14px;
+  color: #000;
+}
+
+.easyModeCheck {
+  width: 30px;
+  height: 29px;
   color: #5a6b3e;
+  background: #7ac100;
+  margin-bottom: 28px;
+}
+
+.goLeaderboard {
+  font-family: StratosSkyeng;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 400;
+  color: #004980;
+  margin-top: 16px;
 }
