--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -109,3 +109,25 @@
 .button:hover {
   background: #7ac100cc;
 }
+
+.newNameSave {
+  width: 150px;
+  height: 45px;
+  border-radius: 12px;
+  background: #27cece;
+
+  color: #fff;
+  text-align: center;
+  font-variant-numeric: lining-nums proportional-nums;
+
+  /* Pres → Caption S */
+  font-family: StratosSkyeng;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /*133.333%*/
+
+  border: none;
+
+  cursor: not-allowed;
+}
