--- a/src/index.css
+++ b/src/index.css
@@ -38,85 +38,13 @@ ol {
 @font-face {
   font-family: "Poppins";
   src:
-    url("../public/assets/fonts/Poppins.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Poppins2";
-  src:
-    url("../public/assets/fonts/Poppins2.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "PoppinsNC";
-  src:
-    url("../public/assets/fonts/PoppinsNC.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "PoppinsNC1";
-  src:
-    url("../public/assets/fonts/PoppinsNC1.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "PoppinsNC2";
-  src:
-    url("../public/assets/fonts/PoppinsNC2.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "PoppinsNC3";
-  src:
     url("../public/assets/fonts/PoppinsNC3.woff2") format("woff2"),
     local("sans-serif");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "PoppinsNC4";
-  src:
-    url("../public/assets/fonts/PoppinsNC4.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "PoppinsNC5";
-  src:
-    url("../public/assets/fonts/PoppinsNC5.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "PoppinsN";
-  src:
-    url("../public/assets/fonts/PoppinsN.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-/* @font-face {
-  font-family: "PoppinsN2";
-  src:
-    url("../public/assets/fonts/PoppinsN2.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-} */
-@font-face {
-  font-family: "Montserrat1";
+  font-family: "Montserrat";
   src:
     url("../public/assets/fonts/Montserrat1.woff2") format("woff2"),
     local("sans-serif");
@@ -124,57 +52,9 @@ ol {
   font-style: normal;
 }
 @font-face {
-  font-family: "Inter1";
-  src:
-    url("../public/assets/fonts/Inter1.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter2";
+  font-family: "Inter";
   src:
     url("../public/assets/fonts/Inter2.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter3";
-  src:
-    url("../public/assets/fonts/Inter3.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter4";
-  src:
-    url("../public/assets/fonts/Inter4.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter5";
-  src:
-    url("../public/assets/fonts/Inter5.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter6";
-  src:
-    url("../public/assets/fonts/Inter6.woff2") format("woff2"),
-    local("sans-serif");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Inter7";
-  src:
-    url("../public/assets/fonts/Inter7.woff2") format("woff2"),
     local("sans-serif");
   font-weight: 400;
   font-style: normal;
