--- a/src/pages/LeaderboardPage/LeaderboardPage.module.css
+++ b/src/pages/LeaderboardPage/LeaderboardPage.module.css
@@ -74,7 +74,7 @@
 .userName,
 .userTime,
 .userAchievements {
-  font-family: Montserrat1, PoppinsNC3;
+  font-family: Montserrat, Poppins;
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
@@ -95,7 +95,7 @@
 .name,
 .time,
 .achievements {
-  font-family: Montserrat1;
+  font-family: Montserrat;
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
@@ -155,7 +155,7 @@
   color: #004980;
   font-size: 18px;
   font-weight: 400;
-  font-family: Inter2;
+  font-family: Inter;
   line-height: 24px;
   text-align: center;
   border-radius: 12px;
