--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -101,7 +101,7 @@
 
 .modalContainerAl {
   display: inline-block;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
