--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -42,6 +42,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 72px;
+  z-index: -1;
 }
 
 .previewText {
@@ -101,14 +102,16 @@
 
 .modalContainerAl {
   display: inline-block;
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   display: flex;
+  align-items: center;
+  justify-content: center;
   background: #004980c0;
-  z-index: 1;
+  z-index: 0;
 }
 
 .forcesBox {
@@ -121,7 +124,7 @@
 
 .forceEye,
 .forceCards {
-  position: absolute;
+  position: relative;
   opacity: 1.0;
   z-index: 2;
 }
@@ -174,6 +177,7 @@
   width: 25px;
   position: relative;
   top: 40px;
+  top: -32px;
   left: 45px;
   border-radius: 50%;
   z-index: 2;
@@ -190,7 +194,7 @@
 .countCardsEnd {
   color: #fff;
   position: relative;
-  top: 20px;
+  top: -50px;
   left: 54px;
   font-family: StratosSkyeng;
   font-size: 14px;
