--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -89,20 +89,15 @@
   height: 45px;
   border-radius: 12px;
   background: #7ac100;
-
   color: #fff;
   text-align: center;
   font-variant-numeric: lining-nums proportional-nums;
-
-  /* Pres → Caption S */
   font-family: StratosSkyeng;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 133.333% */
-
+  line-height: 32px;
   border: none;
-
   cursor: pointer;
 }
 
@@ -115,19 +110,14 @@
   height: 45px;
   border-radius: 12px;
   background: #27cece;
-
   color: #fff;
   text-align: center;
   font-variant-numeric: lining-nums proportional-nums;
-
-  /* Pres → Caption S */
   font-family: StratosSkyeng;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /*133.333%*/
-
+  line-height: 32px;
   border: none;
-
   cursor: not-allowed;
 }
